--- a/app/views/drafts/_pick_x_draft.html.erb
+++ b/app/views/drafts/_pick_x_draft.html.erb
@@ -9,7 +9,7 @@
     </p>
   </div>
 </div>
-<div id="draft-details-container" class="row" data="<%= @draft.id %>" data-team="<%= current_user.team(@draft.league)&.id %>" data-current-pick="<%= @current_pick&.number %>" data-current-pick-id="<%= @current_pick&.id %>" data-your-picks="<%= @your_picks %>" data-draft-type="<%= @draft.league.draft_type %>">
+<div id="draft-details-container" class="row" data="<%= @draft.id %>" data-team="<%= current_user.team(@draft.league)&.id %>" data-current-pick="<%= @current_pick&.number %>" data-current-pick-id="<%= @current_pick&.id %>" data-your-picks="<%= @your_picks %>" data-draft-type="<%= @draft.league.draft_type %>" data-submit-link="<%= Rails.application.routes.url_helpers.game_competition_league_draft_submit_url(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, @draft)%>">
   <%= javascript_pack_tag "draft_viewer" %>
   <div id="draft-concluded">
     The draft is over! View your team <%= link_to "here", game_competition_league_team_path(@draft.league.leagueable.game, @draft.league.leagueable, @draft.league, current_user.team(@draft.league)) %>.
