removed price/prizes from public leagues for now

--- a/app/views/leagues/_pick_x_info.html.erb
+++ b/app/views/leagues/_pick_x_info.html.erb
@@ -21,10 +21,10 @@
     </p>
   <% end %>
   <p>
-    <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %> (?)
+    <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %>
   </p>
   <p>
-    <strong>Prizes:</strong> $
+    <strong>Entry:</strong> Free
   </p>
   <p>
     <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
