--- a/app/assets/stylesheets/competitions.scss
+++ b/app/assets/stylesheets/competitions.scss
@@ -8,6 +8,9 @@
     margin: -1rem -1rem 1rem -1rem;
     padding: 1rem;
     width: auto;
+    &.inline-hero-image {
+      margin-top: 1rem;
+    }
   }
   .container {
     height: 100%;
