--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,7 +90,7 @@
             <div class="cta-text-container">
               <h3>The best fantasy stats for Magic: the Gathering</h3>
               <p>
-                Choose the best players for your team with our advanced metrics.
+                Choose the best players for your team with our advanced metrics, from our powerful xRank to ELO ratings.
               </p>
               <p>
                 Our dataset includes every Pro Tour from the Team Series era and is rapidly expanding.
