--- a/app/assets/stylesheets/react-table.scss
+++ b/app/assets/stylesheets/react-table.scss
@@ -54,6 +54,10 @@
 	border-right: 1px solid rgba(0,0,0,0.02);
 }
 
+.rt-th {
+	font-size: 12px;
+}
+
 .ReactTable .rt-thead.-header {
 	box-shadow: 0 2px 15px 0px rgba(0,0,0,0.15);
 }
