--- a/app/views/admin/dashboard/dashboard.html.erb
+++ b/app/views/admin/dashboard/dashboard.html.erb
@@ -7,5 +7,8 @@
     <p>
       <%= link_to "Create Competition", new_admin_competition_path, class: 'btn btn-primary' %>
     </p>
+    <p>
+      <%= link_to "Player Stats", admin_players_stats_path, class: 'btn btn-primary' %>
+    </p>
   </div>
 </div>
