removed price and prizes from league join

--- a/app/views/leagues/join.html.erb
+++ b/app/views/leagues/join.html.erb
@@ -9,13 +9,10 @@
         <em>Public league</em>
       </p>
       <p>
-        <strong>Cost:</strong> $5
+        <strong>Entry:</strong> Free
       </p>
       <p>
         <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %> (?)
-      </p>
-      <p>
-        <strong>Prizes:</strong> $
       </p>
       <p>
         <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
