--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -33,7 +33,7 @@
                   <a href="http://www.hipstersofthecoast.com" target="_blank">Blog</a>
                 </li>
                 <li>
-                  <a href="http://www.twitter.com/fantasyprotour" target="_blank">Contact Us</a>
+                  <%= link_to "Contact Us", contact_us_path %>
                 </li>
               </ul>
             </div>
