removed create league link

--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -59,8 +59,11 @@
     <div class="create-a-league">
       <h3> Create Your Own League!</h3>
       <p>
-        There are tons of ways to play Fantasy Pro Tour! Choose one a create your own league <%= link_to 'now', new_game_competition_league_path(@game, @competition) %>!
+        There are tons of ways to play Fantasy Pro Tour! Soon, you'll be able to choose a draft type and create your own league.
       </p>
+      <!-- <p>
+        There are tons of ways to play Fantasy Pro Tour! Choose one a create your own league <%= link_to 'now', new_game_competition_league_path(@game, @competition) %>!
+      </p> -->
       <h5>Snake Draft</h5>
       <p>
         <em>Coming Soon!</em>
