added private pick x leagues

--- a/app/views/league_users/confirm.html.erb
+++ b/app/views/league_users/confirm.html.erb
@@ -1,6 +1,11 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
-    <%= render "leagues/info" %>
+    <% case @league.draft_type %>
+    <% when 'snake' %>
+      <%= render 'leagues/snake_info' %>
+    <% when 'pick_x' %>
+      <%= render 'leagues/pick_x_info' %>
+    <% end %>
     <div id="league-user" class="confirm">
       <h3>Please Accept or Decline Your Invitiation</h3>
 
