--- a/app/views/leagues/_pick_x.html.erb
+++ b/app/views/leagues/_pick_x.html.erb
@@ -36,33 +36,104 @@
   </table>
 <!-- If the draft hasn't been completed -->
 <% else %>
-  <h3>Registered Teams</h3>
+  <% if @league.public %>
+    <h3>Registered Teams</h3>
 
-  <% if @league.league_users.length > 0 %>
-  <table class="table table-outer-border table-hover">
+    <% if @league.league_users.length > 0 %>
+    <table class="table table-outer-border table-hover">
+      <thead>
+        <tr>
+          <th>
+            Name
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @league.league_users.each do |league_user| %>
+          <tr>
+            <td>
+              <%= league_user.team.name %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <% else %>
+      <p>
+        No one has signed up yet! Be the first one to join this league.
+      </p>
+      <p>
+        <%= link_to 'Join Now!', game_competition_league_join_path(@game, @competition, @league), class: 'btn btn-primary' %>
+      </p>
+    <% end %>
+  <% else %>
+  <h3>Registered Teams</h3>
+  <% if current_user == @league.admin || current_user.admin %>
+  <p>
+    <%= link_to "Add More Players", game_competition_league_league_users_path(@competition.game, @competition, @league), class: "btn btn-sm btn-primary" unless @league.draft.active || (@league.draft.start_time && (@league.draft.active || Time.now > @league.draft.start_time)) %>
+  </p>
+  <% end %>
+  <table class="table table-bordered table-hover">
     <thead>
       <tr>
         <th>
           Name
         </th>
+        <th>
+          Team
+        </th>
+        <% if current_user == @league.admin  || current_user.admin %>
+          <th>
+            Remove
+          </th>
+        <% end %>
       </tr>
     </thead>
     <tbody>
       <% @league.league_users.each do |league_user| %>
         <tr>
           <td>
-            <%= league_user.team.name %>
+            <% if league_user.user == current_user %>
+              <% if league_user.confirmed %>
+                <%= link_to league_user.user.name, game_competition_league_team_path(@league.leagueable.game, @league.leagueable, @league, league_user.team) %> (You)
+              <% else %>
+                <%= league_user.user.name %> (You) <%= link_to "(Accept Your Invite)", game_competition_league_league_user_confirm_path(@league.leagueable.game, @league.leagueable, @league, league_user) %>
+              <% end %>
+            <% elsif league_user.user == @league.admin %>
+              <p>
+                <%= link_to league_user.user.name, game_competition_league_team_path(@league.leagueable.game, @league.leagueable, @league, league_user.team) %> (Commissioner)
+              </p>
+            <% else %>
+              <% if league_user.confirmed %>
+                <%= link_to league_user.user.name, game_competition_league_team_path(@league.leagueable.game, @league.leagueable, @league, league_user.team) %>
+              <% else %>
+                <span class="unconfirmed">
+                  <% if current_user == @league.admin || current_user.admin %>
+                    <%= league_user.user.name %> <%= link_to "(Resend Invite)", game_competition_league_league_user_resend_invite_path(@league.leagueable.game, @league.leagueable, @league, league_user)  %>
+                  <% else %>
+                    <%= league_user.user.name %> (Invite Pending)
+                  <% end %>
+                </span>
+              <% end %>
+            <% end %>
           </td>
+          <td>
+            <% if current_user&.team(@league)&.submitted %>
+              <%= link_to league_user.user&.team(@league).name , game_competition_league_team_path(@league.leagueable.game, @league.leagueable, @league, league_user.team) %>
+            <% else %>
+              <%= league_user.user&.team(@league).name %>
+            <% end %>
+          </td>
+          <% if current_user == @league.admin || current_user.admin %>
+            <td>
+              <% unless @league.draft.active || (@league.draft.start_time && (@league.draft.active || Time.now > @league.draft.start_time)) %>
+                <%= link_to "Remove", game_competition_league_league_user_path(@competition.game, @competition, league_user.league, league_user), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-sm btn-danger" %>
+              <% end %>
+            </td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
   </table>
-  <% else %>
-    <p>
-      No one has signed up yet! Be the first one to join this league.
-    </p>
-    <p>
-      <%= link_to 'Join Now!', game_competition_league_join_path(@game, @competition, @league), class: 'btn btn-primary' %>
-    </p>
   <% end %>
 <% end %>
