--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,14 +30,14 @@
       <% end %>
       <% if alert %>
         <div class="alert alert-danger alert-dismissible fade show col-sm-6 offset-sm-3" role="alert">
-          <%= alert %>
+          <span><%= alert %></span>
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
       <% elsif notice %>
         <div class="alert alert-success alert-dismissible fade show col-sm-6 offset-sm-3" role="alert">
-          <%= notice %>
+          <span><%= notice %></span>
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
