fixed league index

--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -64,6 +64,9 @@
     </div>
     <div class="create-a-league">
       <h3> Create Your Own League!</h3>
+      <p>
+        There are tons of ways to play Fantasy Pro Tour!
+      </p>
       <table class="table table-outer-border">
         <thead>
           <tr>
@@ -121,31 +124,16 @@
           </tr>
         </tbody>
       </table>
+      <h5>Pick X Players</h5>
       <p>
-        There are tons of ways to play Fantasy Pro Tour! Soon, you'll be able to choose a draft type and create your own league.
+        You pick X number of players for your team, independent of what players the other teams in your league select. This means that multiple teams in your league can have the same player. There is no timed draft portion&mdash;pick your players on your own schedule!
       </p>
-      <!-- <p>
-        There are tons of ways to play Fantasy Pro Tour! Choose one a create your own league <%= link_to 'now', new_game_competition_league_path(@game, @competition) %>!
-      </p> -->
       <h5>Snake Draft</h5>
       <p>
         <em>Coming Soon!</em>
       </p>
-      <!-- <p>
-        <%= link_to 'Create League', new_game_competition_league_path(@game, @competition, draft_type: 'snake'), class: 'btn btn-sm btn-primary' %>
-      </p> -->
       <p>
         You set a time for your league to draft and each team takes turns picking players for their team. Players can only be on one team per league.
-      </p>
-      <h5>Pick X Players</h5>
-      <p>
-        <em>Coming Soon!</em>
-      </p>
-      <!-- <p>
-        <%= link_to 'Create League', new_game_competition_league_path(@game, @competition, draft_type: 'pick_x'), class: 'btn btn-sm btn-primary' %>
-      </p> -->
-      <p>
-        You pick X number of players for your team, independent of what players the other teams in your league select. This means that multiple teams in your league can have the same player. There is no timed draft portion&mdash;pick your players on your own schedule!
       </p>
     </div>
   </div>
