--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,13 +101,13 @@
             <div class="cta-text-container">
               <h3>Upcoming Events</h3>
               <div class="event-container">
-                <p class="event-button">World Championship (September 21-23)</p>
+                <p class="event-button">Grand Prix Montreal (October 6-7)</p>
+              </div>
+              <div class="event-container">
+                <p class="event-button">Grand Prix Mexico City (October 6-7)</p>
               </div>
               <div class="event-container">
                 <p class="event-button">Pro Tour Guilds of Ravnica (November 9-11)</p>
-              </div>
-              <div class="event-container">
-                <p class="event-button">Pro Tour Ravnica Allegiance (TBA)</p>
               </div>
             </div>
           </div>
