added seasons admin controller and views

--- a/app/views/admin/dashboard/dashboard.html.erb
+++ b/app/views/admin/dashboard/dashboard.html.erb
@@ -10,5 +10,8 @@
     <p>
       <%= link_to "Player Stats", admin_players_stats_path, class: 'btn btn-primary' %>
     </p>
+    <p>
+      <%= link_to "Create Season", new_admin_season_path, class: 'btn btn-primary' %>
+    </p>
   </div>
 </div>
