--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -65,7 +65,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @competitions.order(date: :desc).each do |competition| %>
+          <% @competitions.where("date <= ?", Time.now).order(date: :desc).each do |competition| %>
             <tr>
               <td>
                 <%= competition.name %>
