--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -53,7 +53,7 @@
       overflow: hidden;
       svg {
         position: absolute;
-        top: 0;
+        top: -1px;
         left: 0;
         width: 120%;
         height: 10vw;
