--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -120,6 +120,11 @@ $font-family-serif:      Georgia, Cambria, "Times New Roman", Times, serif;
   &-warning:hover {
     color: $white;
   }
+
+  &.btn-more-info {
+    padding: 0.1rem 0.3rem;
+    margin-left: 0.25rem;
+  }
 }
 
 // Typography ==================================================================
