--- a/app/views/faqs/show.html.erb
+++ b/app/views/faqs/show.html.erb
@@ -5,8 +5,8 @@
         Need support? Find us on Twitter or join our Discord!
       </p>
       <p>
-        <%= link_to "Twitter", "https://www.twitter.com/fantasyprotour", class: "btn btn-dark", target: "_blank" %>
-        <%= link_to "Discord", "https://discord.gg/CRVwFzf", class: "btn btn-dark", target: "_blank" %>
+        <%= link_to "Twitter", "https://www.twitter.com/fantasyprotour", class: "btn btn-info", target: "_blank" %>
+        <%= link_to "Discord", "https://discord.gg/CRVwFzf", class: "btn btn-primary", target: "_blank" %>
       </p>
       <h1>How Fantasy Pro Tour Works</h1>
       <h5>What Is It?</h5>
@@ -18,7 +18,7 @@
       </p>
       <h5>League Structures</h5>
       <p>
-        Fantasy Pro Tour supports multiple fantasy drafting league structures, though not every event supports every league type.
+        There are multiple ways to structure your league: you can choose the length of your league (season-long on single-event) as well as the draft type (Pick X or Snake Draft). Not every event supports every draft type, though.
       </p>
       <p>
         Every event has a public "Pick X Players" league, which allow you to take your time and pick your favorite X players, no matter what players anyone else in the league has chosen.
@@ -31,7 +31,7 @@
         During the draft, the players that are still available to draft are in listed in the "Available Players" table. Currently, these are restricted to players that are (or have been) on a Pro Tour team in the Pro Tour Team Series.
       </p>
       <p>
-        The "xRank" column is the player's rank in the latest Fantasy Pro Tour Power Rankings. These rankings are determined by using a combination of ELO rating (explained below), Top 25 ranking, as well as a player's success in the formats played at this event.
+        The "Points" column is the player's total Pro Points earned during the past four Cycles (usually the last 10-12 months.)
       </p>
       <p>
         The "ELO" column lists the player's ELO rating, which is a scoring system where every player starts with a rating of 1500. After each match, the winning player takes points from the losing player. The amount of points at stake is determined by the difference in the players' ratings.
