--- a/app/views/invite_mailer/new_user.html.erb
+++ b/app/views/invite_mailer/new_user.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Hey there!</h1>
     <p>
-      You've been invited to join <%= @league.admin.name %>'s <%= @competition.name %> fantasy draft! To sign up for an account and accept this invitiation, click <a href="<%= @url %>">here</a>, or visit the following URL:
+      You've been invited to join <%= @league.admin.name %>'s <%= @leagueable.name %> fantasy draft! To sign up for an account and accept this invitiation, click <a href="<%= @url %>">here</a>, or visit the following URL:
     </p>
     <p>
       <%= @url %>
