--- a/app/views/leagues/_pick_x.html.erb
+++ b/app/views/leagues/_pick_x.html.erb
@@ -1,4 +1,4 @@
-<% if @league.leagueable.date < Time.now %>
+<% if @league.leagueable.start_date < Time.now %>
   <% if @league.leagueable.score_as_of_round > 0 %>
     <p>
       <em>(Through Round <%= @league.leagueable.score_as_of_round %>)</em>
