--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,6 +50,12 @@ html {
           margin: 0 auto 1em;
         }
       }
+      .content {
+        padding: 1rem 0 0;
+      }
+      .with-fixed-bottom-bar {
+        padding-bottom: 75px;
+      }
     }
     footer {
       position: absolute;
