--- a/app/assets/stylesheets/leagues.scss
+++ b/app/assets/stylesheets/leagues.scss
@@ -1,4 +1,32 @@
 #league {
+  #submit-message {
+    z-index: 100;
+    position: absolute;
+    padding: 1rem;
+    margin-bottom: -1.1rem;
+    bottom: 0;
+    top: auto;
+    width: 100%;
+    text-align: center;
+    background-color: $light;
+    border: 1px solid darken($light, 5%);
+    &.alert-fixed {
+      margin: 0;
+      position: fixed;
+    }
+    &.alert-ready-to-submit {
+      color: white;
+      background-color: $primary;
+      border: 1px solid darken($primary, 5%);
+    }
+    .btn {
+      display: inline-block;
+      margin-left: 1rem;
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+  }
   span {
     &.unconfirmed {
       font-style: italic;
