--- a/app/views/admin/dashboard/dashboard.html.erb
+++ b/app/views/admin/dashboard/dashboard.html.erb
@@ -2,10 +2,10 @@
   <div class="col-md-8 offset-md-2">
     <h1>Admin Dashboard</h1>
     <p>
-      <%= link_to "Create League", new_admin_league_path, class: 'btn btn-primary' %>
+      <%= link_to "Competitions", admin_competitions_path, class: 'btn btn-primary' %>
     </p>
     <p>
-      <%= link_to "Create Competition", new_admin_competition_path, class: 'btn btn-primary' %>
+      <%= link_to "Create League", new_admin_league_path, class: 'btn btn-primary' %>
     </p>
     <p>
       <%= link_to "Player Stats", admin_players_stats_path, class: 'btn btn-primary' %>
