--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-8 offset-md-2">
     <h2><%= @competition.name %></h2>
     <p>
-      Date: <%= @competition.date.localtime.strftime("%m/%d/%Y") %>
+      Date: <%= @competition.start_date.localtime.strftime("%m/%d/%Y") %>
     </p>
     <p>
       Location: <%= @competition.location %>
