--- a/app/views/invite_mailer/existing_user.html.erb
+++ b/app/views/invite_mailer/existing_user.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Hey, <%= @user.name %>!</h1>
     <p>
-      You've been invited to join <%= @league.admin.name %>'s <%= @competition.name %> fantasy draft! To accept this invitiation, click <a href="<%= @url %>">here</a>, or click the visit the following URL:
+      You've been invited to join <%= @league.admin.name %>'s <%= @leagueable.name %> fantasy draft! To accept this invitiation, click <a href="<%= @url %>">here</a>, or click the visit the following URL:
     </p>
     <p>
       <%= @url %>
