--- a/app/views/users/leagues.html.erb
+++ b/app/views/users/leagues.html.erb
@@ -4,8 +4,9 @@
     <p>
       <%= link_to "Create a League", game_competitions_path(Game.find_by_name("Magic: the Gathering")), class: "btn btn-sm btn-primary" %>
     </p>
-    <% if current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.date > ?", Date.today - 7.days).length > 0 %>
-      <table class="table table-bordered table-hover">
+    <h3>Single-Event Leagues</h3>
+    <% if current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.start_date > ?", Date.today - 7.days).length > 0 %>
+      <table class="table table-outer-border table-hover">
         <thead>
           <tr>
             <th>
@@ -26,13 +27,13 @@
           </tr>
         </thead>
         <tbody>
-          <% current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.date > ?", Date.today - 7.days).each do |league| %>
+          <% current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.start_date > ?", Date.today - 7.days).each do |league| %>
           <tr>
             <td>
               <%= league.leagueable.name %>
             </td>
             <td>
-              <%= league.leagueable.date.localtime.strftime("%m/%d/%Y") %>
+              <%= league.leagueable.start_date.localtime.strftime("%m/%d/%Y") %>
             </td>
             <td>
               <%= league.admin.name %>
@@ -41,7 +42,11 @@
               <%= league.users.count %>
             </td>
             <td>
-              <%= link_to "View", game_competition_league_path(league.leagueable.game, league.leagueable, league), class: "btn btn-sm btn-primary" %>
+              <% if league.user_confirmed? current_user %>
+                <%= link_to "View", game_competition_league_path(league.leagueable.game, league.leagueable, league), class: "btn btn-sm btn-primary" %>
+              <% else %>
+                <%= link_to "Accept Invite", game_competition_league_league_user_confirm_url(game_slug: league.leagueable.game.slug, competition_slug: league.leagueable.slug, league_id: league.id, league_user_id: LeagueUser.find_by(user_id: current_user.id, league_id: league.id)), class: "btn btn-sm btn-primary" %>
+              <% end %>
             </td>
           </tr>
           <% end %>
@@ -49,14 +54,74 @@
       </table>
     <% else %>
       <p>
-        You don't have any active leagues.
+        You don't have any active single-event leagues.
+      </p>
+    <% end %>
+
+    <h3>Season-Long Leagues</h3>
+    <% if current_user.leagues.where(leagueable_type: "Season").joins("LEFT JOIN seasons ON seasons.id = leagues.leagueable_id").where("seasons.end_date > ?", Date.today + 7.days).length > 0 %>
+      <table class="table table-outer-border table-hover">
+        <thead>
+          <tr>
+            <th>
+              Competition
+            </th>
+            <th>
+              Start Date
+            </th>
+            <th>
+              End Date
+            </th>
+            <th>
+              Commissioner
+            </th>
+            <th>
+              Players
+            </th>
+            <th>
+
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <% current_user.leagues.where(leagueable_type: "Season").joins("LEFT JOIN seasons ON seasons.id = leagues.leagueable_id").where("seasons.end_date > ?", Date.today + 7.days).each do |league| %>
+          <tr>
+            <td>
+              <%= league.leagueable.name %>
+            </td>
+            <td>
+              <%= league.leagueable.start_date %>
+            </td>
+            <td>
+              <%= league.leagueable.end_date %>
+            </td>
+            <td>
+              <%= league.admin.name %>
+            </td>
+            <td>
+              <%= league.users.count %>
+            </td>
+            <td>
+              <% if league.user_confirmed? current_user %>
+                <%= link_to "View", game_season_league_path(league.leagueable.game, league.leagueable, league), class: "btn btn-sm btn-primary" %>
+              <% else %>
+                <%= link_to "Accept Invite", game_season_league_league_user_confirm_url(game_slug: league.leagueable.game.slug, season_slug: league.leagueable.slug, league_id: league.id, league_user_id: LeagueUser.find_by(user_id: current_user.id, league_id: league.id)), class: "btn btn-sm btn-primary" %>
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% else %>
+      <p>
+        You don't have any active season-long leagues.
       </p>
     <% end %>
 
     <h1>Your Past Leagues</h1>
 
-    <% if current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.date < ?", Date.today - 7.days).length > 0 %>
-      <table class="table table-bordered table-hover">
+    <% if current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.start_date < ?", Date.today - 7.days).length > 0 %>
+      <table class="table table-outer-border table-hover">
         <thead>
           <tr>
             <th>
@@ -77,13 +142,13 @@
           </tr>
         </thead>
         <tbody>
-          <% current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.date < ?", Date.today - 7.days).each do |league| %>
+          <% current_user.leagues.where(leagueable_type: "Competition").joins("LEFT JOIN competitions ON competitions.id = leagues.leagueable_id").where("competitions.start_date < ?", Date.today - 7.days).each do |league| %>
             <tr>
               <td>
                 <%= league.leagueable.name %>
               </td>
               <td>
-                <%= league.leagueable.date.localtime.strftime("%m/%d/%Y") %>
+                <%= league.leagueable.start_date.localtime.strftime("%m/%d/%Y") %>
               </td>
               <td>
                 <%= league.admin.name %>
