--- a/app/views/admin/competitions/new.html.erb
+++ b/app/views/admin/competitions/new.html.erb
@@ -20,8 +20,8 @@
         <%= f.text_field :slug, required: true, class: "form-control" %>
       </div>
       <div class="form-group required">
-        <%= f.label :date, class: "control-label" %>
-        <%= f.datetime_field :date, required: true, class: "form-control" %>
+        <%= f.label :start_date, class: "control-label" %>
+        <%= f.datetime_field :start_date, required: true, class: "form-control" %>
       </div>
       <div class="form-group required">
         <%= f.label :location, class: "control-label" %>
