--- a/app/views/admin/competitions/edit.html.erb
+++ b/app/views/admin/competitions/edit.html.erb
@@ -11,7 +11,7 @@
         <%= f.text_field :name, required: true, class: "form-control" %>
       </div>
       <div class="form-group required">
-        <%= f.label :date, "Start Date", class: "control-label" %>
+        <%= f.label :start_date, "Start Date", class: "control-label" %>
         <%= f.datetime_field :date, required: true, class: "form-control" %>
       </div>
       <div class="form-group required">
