--- a/app/views/leagues/join.html.erb
+++ b/app/views/leagues/join.html.erb
@@ -12,8 +12,12 @@
         <strong>Entry:</strong> Free
       </p>
       <p>
-        <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %> (?)
+        <strong>Draft Type:</strong> <%= @league.draft_type.humanize.titleize %>
+        <button type="button" class="btn btn-secondary btn-sm btn-more-info" data-toggle="modal" data-target="#draft-types-modal">
+          ?
+        </button>
       </p>
+      <%= render 'leagues/draft_types_modal' %>
       <p>
         <strong>Players Per Team:</strong> <%= @league.num_draft_rounds %>
       </p>
