--- a/app/views/admin/competitions/edit.html.erb
+++ b/app/views/admin/competitions/edit.html.erb
@@ -12,7 +12,7 @@
       </div>
       <div class="form-group required">
         <%= f.label :start_date, "Start Date", class: "control-label" %>
-        <%= f.datetime_field :date, required: true, class: "form-control" %>
+        <%= f.datetime_field :start_date, required: true, class: "form-control" %>
       </div>
       <div class="form-group required">
         <%= f.label :end_date, "End Date", class: "control-label" %>
